--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
-contact_note: >
+title: Yue Xing # the website title (if blank, full name will be used instead)
+first_name: Yue (Sarah)
+middle_name: 
+last_name: Xing
+contact_note: xingyue0717@hotmail.com
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
